Change implementation + add more test